fix:Wikithoughts shifts higher up

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -52,6 +52,7 @@ body{
     border: 8px #34495e solid;
     border-radius: 10px;
     background-color: #34495e;
+    margin-bottom: 1.5%;
 }
 
 .datadog{
@@ -63,7 +64,7 @@ body{
     width: 760px;
     height: 580px;
     float: right;
-    margin-bottom: 3%;
+    margin-bottom: 0.5%;
 }
 
 .announcements{
@@ -71,7 +72,7 @@ body{
     width: 50%;
     padding-top: 22%;
     padding-left: 1%;
-    min-height: 840px;
+    min-height: 670px;
     overflow: hidden;
     word-wrap: break-word;
 }
